--- a/assets/css/responsive-elements.css
+++ b/assets/css/responsive-elements.css
@@ -57,4 +57,20 @@
 	.conteiner{
 		width: 290px;
 	}
+
+	header > nav {
+		background: #FFF;
+		width: 100%;
+		padding: 10px 0 20px;
+		border-radius: 9px;
+	}
+
+
+	header  > nav > ul {
+		flex-direction: column;
+	}
+
+	header > nav > ul > li {
+		margin: 10px 0;	
+	}
 }
